# hacker-league-jan23

./: .gitignore  README.md  env.sample  pyproject.toml
src/hello_world/: crew.py
src/hello_world/agents/: metadata.yaml
src/hello_world/agents/analysis/: insight_analyzer.yaml
src/hello_world/agents/execution/: data_processor.yaml
src/hello_world/agents/research/: web_researcher.yaml
src/hello_world/tools/: custom_tool.py
