[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = "A CrewAI project with advanced web research capabilities using Google's Gemini API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {version = "0.1.6", extras = ["tools"]}
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
langchain = ">=0.0.335,<0.0.336"
google-generativeai = "^0.3.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pyyaml = "^6.0.1"
aiohttp = "^3.9.1"
validators = "^0.22.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
responses = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
